--- a/RESTwebserviceVejrstation/RESTwebserviceVejrstation/RESTwebserviceVejrstation.csproj
+++ b/RESTwebserviceVejrstation/RESTwebserviceVejrstation/RESTwebserviceVejrstation.csproj
@@ -76,6 +76,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\RESTwebserviceVejrstationEksamen2018 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
