Conveteret til http

--- a/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
+++ b/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
@@ -45,7 +45,7 @@
       </endpointBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
+        <add binding="basicHttpsBinding" scheme="http " />
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="false" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
