--- a/RESTwebserviceVejrstation/RESTwebserviceVejrstation/RESTwebserviceVejrstation.csproj
+++ b/RESTwebserviceVejrstation/RESTwebserviceVejrstation/RESTwebserviceVejrstation.csproj
@@ -70,7 +70,7 @@
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vejrstation.cs" />
+    <Compile Include="Dataset.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
