--- a/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
+++ b/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
@@ -8,24 +8,27 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+  
   <system.serviceModel>
     <services>
 
-      <service name="RESTwebserviceVejrstation.Service1" behaviorConfiguration="ServiceBehavior">
-
-<endpoint address="" binding="webHttpBinding" contract="RESTwebserviceVejrstation.IService1" behaviorConfiguration="webHttp"/>
+      <service name="RESTwebserviceVejrstation.Service1" behaviorConfiguration="ServiceBehavior"> 
+       <endpoint address="" binding="webHttpBinding" bindingConfiguration="webHttpBindingWithJsonP" contract="RESTwebserviceVejrstation.IService1" behaviorConfiguration="webHttp"/>
 
       </service>
 
     </services>
+    
+      <bindings>
+        <webHttpBinding>
+          <binding name="webHttpBindingWithJsonP" crossDomainScriptAccessEnabled="true"></binding>
+        </webHttpBinding>
+      </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="ServiceBehavior">
-
           <serviceMetadata httpGetEnabled="false"/>
-
           <serviceDebug includeExceptionDetailInFaults="true"/>
-
     </behavior>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
@@ -47,7 +50,7 @@
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="http " />
     </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="false" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
