--- a/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
+++ b/RESTwebserviceVejrstation/RESTwebserviceVejrstation/Web.config
@@ -24,11 +24,13 @@
           <binding name="webHttpBindingWithJsonP" crossDomainScriptAccessEnabled="true"></binding>
         </webHttpBinding>
       </bindings>
+    
+    
     <behaviors>
       <serviceBehaviors>
         <behavior name="ServiceBehavior">
-          <serviceMetadata httpGetEnabled="false"/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
     </behavior>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
@@ -54,11 +56,6 @@
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
-    <!--
-        To browse web app root directory during debugging, set the value below to true.
-        Set to false before deployment to avoid disclosing web app folder information.
-      -->
-    <directoryBrowse enabled="true"/>
   </system.webServer>
 
 </configuration>
